[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtimectl"
version = "0.3.0"
description = "Minimal runtime control queue for training loops"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "bici" }
]
dependencies = []

[project.scripts]
runtimectl = "runtimectl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
